# ThinkSpace

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
public/: agents.json  privacy.html
src/: App.tsx  AuthWrapper.tsx  main.tsx
src-tauri/: Cargo.toml  agents.json  check_output.txt  check_output_2.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_manual.md  ai_provider.rs  commands.rs  db.rs  deep_research.rs  dioxus_split_pane.rs  file_watcher.rs  main.rs  minimax_api.rs  minimax_enhanced.rs  repo_indexer.rs  scanner.rs  session.rs  tkg.rs
src-tauri/src/commands/: embed_file.rs  orchestrate_agents.rs
src-tauri/src/minimax_enhanced/: xml_tool_parser.rs
src-tauri/src/services/: embedding_service.rs  qdrant_service.rs
src-tauri/src/tests/: db_tests.rs  mod.rs
src-tauri/src/tools/: filesystem.rs  mod.rs
src/components/: AIChat.tsx  AIChatEnhanced.tsx  AgentManager.tsx  AgentOrchestrationHub.tsx  AppBackground.tsx  BlueprintsBrowser.tsx  CascadeBrainstorm.tsx  ContentBrowser.tsx  DeepResearchPreview.tsx  DojoCanvas.tsx  FilePickerModal.tsx  HeroBackground.tsx  HyperfocusTimer.tsx  ImageGallery.tsx  ImageGenerator.tsx  InvisibleSidebar.tsx  KFactorCalculator.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LandingPage.tsx  LoadSessionModal.tsx  ManifoldPreview.tsx  MarkdownRenderer.tsx  MatrixRainBackground.tsx  MermaidRenderer.tsx  OnboardingWizard.tsx  PreviewErrorBoundary.tsx  PricingCalculator.tsx  ProgressTracker.tsx  ProximityButton.tsx  SaveSessionModal.tsx  SearchPanel.tsx  StudyGuideGenerator.tsx  ThemeSwitcher.tsx  ThemedExample.tsx  ThreeJSBackground.tsx  ThreeJSPreview.tsx  ToolToolbar.tsx  VisualLearning.tsx  (+1 more)
src/contexts/: AuthContext.tsx  KanbanContext.tsx  ThemeContext.tsx
src/hooks/: useProximity.ts
src/lib/: api.ts  events.ts  platform.ts  presetAgents.ts  supabase.ts  tauri-bridge.ts  webApi.ts
supabase/: ADMIN_SETUP_GUIDE.md  schema.sql  user_profiles.sql
(+23 files in other folders)
